Criação do model, Dto, repository, service e config e producer do RabbitMQ

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
+server.port=8081
 
+spring.rabbitmq.addresses=amqps://zugxefvv:vk2w0-38LYLORTFVDAm5bhugZDa7ITR4@jackal.rmq.cloudamqp.com/zugxefvv
+
+broker.queue.email.name.confirmation=default.confirmation
