--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,13 @@
 			<version>4.0.3</version>
 		</dependency>
 
+		<dependency>
+			<groupId>br.com.acabouomony</groupId>
+			<artifactId>security</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+			<classifier>security</classifier>
+		</dependency>
+
 
 	</dependencies>
 
